--- a/package.json
+++ b/package.json
@@ -70,6 +70,8 @@
     "eslint": "8.48.0",
     "eslint-config-next": "^16.0.7",
     "input-otp": "^1.4.2",
+    "jspdf": "^4.2.0",
+    "jspdf-autotable": "^5.0.7",
     "kbar": "^0.1.0-beta.45",
     "lucide-react": "^0.476.0",
     "match-sorter": "^8.0.0",
